Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:47+0200\n"
+"PO-Revision-Date: 2010-05-25 11:48+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6872,9 +6872,8 @@ msgid "Logo link target"
 msgstr "Ziel für Logo-Link"
 
 #: setup/lib/messages.inc.php:185
-#, fuzzy
 msgid "Highlight server under the mouse cursor"
-msgstr "Zeile unter Mauscursor hervorheben"
+msgstr "Server unter Mauscursor hervorheben"
 
 #: setup/lib/messages.inc.php:186
 msgid "Enable highlighting"
