--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:48+0200\n"
+"PO-Revision-Date: 2010-05-25 11:49+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6974,13 +6974,12 @@ msgid "Maximum tables"
 msgstr "Tabellen Maximum"
 
 #: setup/lib/messages.inc.php:208
-#, fuzzy
 msgid ""
 "The number of bytes a script is allowed to allocate, eg. [kbd]32M[/kbd] "
 "([kbd]0[/kbd] for no limit)"
 msgstr ""
-"Die Anzahl der Sekunden, welche ein Script zur Ausführung benötigen darf"
-"([kbd]0[/kbd] für unbegrenzt)"
+"Anzahl der Bytes, welche ein Script zur Ausführung benötigen darf, z.B. "
+"[kbd]32M[/kbd]  ([kbd]0[/kbd] für unbegrenzt)"
 
 #: setup/lib/messages.inc.php:209
 msgid "Memory limit"
