Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -7148,9 +7148,8 @@ msgid "SweKey config file"
 msgstr "SweKey Konfigurationsdatei"
 
 #: setup/lib/messages.inc.php:252
-#, fuzzy
 msgid "Authentication method to use"
-msgstr "Authentifikationstyp"
+msgstr "Zu benutzende Authentifikations-Methode"
 
 #: setup/lib/messages.inc.php:253
 msgid "Authentication type"
