--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:51+0200\n"
+"PO-Revision-Date: 2010-05-25 11:52+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7448,9 +7448,8 @@ msgid "Server socket"
 msgstr "Sockel"
 
 #: setup/lib/messages.inc.php:316
-#, fuzzy
 msgid "Enable SSL for connection to MySQL server"
-msgstr "Verbindungsaufbau zu MySQL-Server schlug fehl"
+msgstr "Ermögliche SSL für Verbindung zum MySQL-Server"
 
 #: setup/lib/messages.inc.php:317
 msgid "Use SSL"
