--- a/po/de.po
+++ b/po/de.po
@@ -7563,9 +7563,8 @@ msgid "Allow to display database and table statistics (eg. space usage)"
 msgstr ""
 
 #: setup/lib/messages.inc.php:344
-#, fuzzy
 msgid "Show statistics"
-msgstr "Zeilenstatistik"
+msgstr "Zeige Statistik"
 
 #: setup/lib/messages.inc.php:345
 msgid ""
