Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:53+0200\n"
+"PO-Revision-Date: 2010-05-25 11:54+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7801,9 +7801,8 @@ msgid "Insert as new row and ignore errors"
 msgstr "Als neue Zeile einfügen und Fehler ignorieren"
 
 #: tbl_change.php:1132
-#, fuzzy
 msgid "Show insert query"
-msgstr "Ansicht als SQL Abfrage"
+msgstr "Zeige insert  Abfrage"
 
 #: tbl_change.php:1147
 msgid "Go back to previous page"
