Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 11:54+0200\n"
+"PO-Revision-Date: 2010-05-25 11:55+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -8055,10 +8055,9 @@ msgstr ""
 "FOREIGN KEY existiert."
 
 #: tbl_relation.php:413
-#, fuzzy
 #| msgid "Foreign key limit"
 msgid "Foreign key constraint"
-msgstr "FOREIGN KEY Limit"
+msgstr "Beschränkung für auswärtige Schlüssel"
 
 #: tbl_row_action.php:29
 msgid "No rows selected"
