--- a/po/de.po
+++ b/po/de.po
@@ -8092,11 +8092,10 @@ msgid "Browse distinct values"
 msgstr "Zeige nur unterschiedliche Werte"
 
 #: tbl_structure.php:361
-#, fuzzy
 #| msgid "None"
 msgctxt "None for default"
 msgid "None"
-msgstr "keine"
+msgstr "kein(e)"
 
 #: tbl_structure.php:374
 #, php-format
