--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:01+0200\n"
+"PO-Revision-Date: 2010-05-25 12:02+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6793,7 +6793,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:166
 msgid "How many rows can be inserted at one time"
-msgstr ""
+msgstr "Anzahl der auf einmal einfügbaren Zeilen"
 
 #: setup/lib/messages.inc.php:167
 msgid "Number of inserted rows"
