Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:06+0200\n"
+"PO-Revision-Date: 2010-05-25 12:07+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -2910,7 +2910,7 @@ msgstr "Benutze hexadecimal für BLOB"
 
 #: libraries/export/sql.php:120
 msgid "Export time in UTC"
-msgstr ""
+msgstr "Zeit des Exports in UTC"
 
 #: libraries/export/sql.php:122
 msgid "Export type"
