--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:17+0200\n"
+"PO-Revision-Date: 2010-05-25 12:18+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5598,7 +5598,7 @@ msgstr "Verbindung zu Master %s fehlgeschlagen."
 #: server_replication.php:65
 msgid ""
 "Unable to read master log position. Possible privilege problem on master."
-msgstr ""
+msgstr "\"log position\" auf Master nicht lesbar. Rechteproblem?"
 
 #: server_replication.php:71
 msgid "Unable to change master"
