--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:18+0200\n"
+"PO-Revision-Date: 2010-05-25 12:19+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5612,6 +5612,7 @@ msgstr "Master-Server wurde erfolgreich auf %s geändert."
 #: server_replication.php:182
 msgid "This server is configured as master in a replication process."
 msgstr ""
+"Dieser server ist als Master in einem Replikations-Prozess konfiguriert."
 
 #: server_replication.php:184 server_status.php:281
 msgid "Show master status"
