Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:21+0200\n"
+"PO-Revision-Date: 2010-05-25 12:25+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5643,6 +5643,11 @@ msgid ""
 "ignore all databases by default and allow only certain databases to be "
 "replicated. Please select the mode:"
 msgstr ""
+"Dieser Server ist als nicht Master in einem Replikations-Prozess "
+"konfiguriert. Ihnen stehen zwei Konfigurationsmethoden zur Auswahl:/nAlle "
+"bis auf bestimmte Datenbanken replizieren (nützlich, wenn die mehrheit "
+"repliziert werden soll)/nNur bestimmte Datenbanken replizieren/nBitte wählen "
+"Sie:"
 
 #: server_replication.php:221
 msgid "Replicate all databases; Ignore:"
