--- a/po/de.po
+++ b/po/de.po
@@ -5651,7 +5651,7 @@ msgstr ""
 
 #: server_replication.php:221
 msgid "Replicate all databases; Ignore:"
-msgstr ""
+msgstr "Repliziere alle Datenbanken bis auf:"
 
 #: server_replication.php:222
 msgid "Ignore all databases; Replicate:"
