Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:25+0200\n"
+"PO-Revision-Date: 2010-05-25 12:27+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5675,6 +5675,9 @@ msgid ""
 "should see a message informing you, that this server <b>is</b> configured as "
 "master"
 msgstr ""
+"Nachdem Sie den MySQL-Server neu gestartet haben, klicken Sie auf \"Go\". "
+"Daraufhin sollten Sie eien Meldung sehen, dass dieser Server als Master "
+"konfiguriert <b>ist</b> ."
 
 #: server_replication.php:293
 msgid "Slave SQL Thread not running!"
