--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:27+0200\n"
+"PO-Revision-Date: 2010-05-25 12:28+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5681,7 +5681,7 @@ msgstr ""
 
 #: server_replication.php:293
 msgid "Slave SQL Thread not running!"
-msgstr ""
+msgstr "Slave SQL Thread läuft nicht!"
 
 #: server_replication.php:296
 msgid "Slave IO Thread not running!"
