Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:28+0200\n"
+"PO-Revision-Date: 2010-05-25 12:29+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5691,6 +5691,8 @@ msgstr "Slave IO Thread läuft nicht!"
 msgid ""
 "Server is configured as slave in a replication process. Would you like to:"
 msgstr ""
+"Dieser Server ist als Slave in eienem Replikations Prozess konfiguriert. "
+"Möchten Sie:"
 
 #: server_replication.php:308
 msgid "See slave status table"
