--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:29+0200\n"
+"PO-Revision-Date: 2010-05-25 12:30+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -5696,7 +5696,7 @@ msgstr ""
 
 #: server_replication.php:308
 msgid "See slave status table"
-msgstr ""
+msgstr "Die Slave Statustabelle sehen"
 
 #: server_replication.php:311
 msgid "Synchronize databases with master"
