--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:32+0200\n"
+"PO-Revision-Date: 2010-05-25 12:33+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6797,6 +6797,8 @@ msgid ""
 "Default format; be aware that this list depends on location (database, "
 "table) and only SQL is always available"
 msgstr ""
+"Voreingestelltes Format. Bitte beachten, dass diese Liste vom Ort abhängt "
+"(Datenbank, Tabelle) und nur SQL immer verfügbar ist"
 
 #: setup/lib/messages.inc.php:162
 msgid "Partial import: skip queries"
