--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:33+0200\n"
+"PO-Revision-Date: 2010-05-25 12:34+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6827,7 +6827,7 @@ msgstr "Anzahl der eingefügten Zeilen."
 
 #: setup/lib/messages.inc.php:168
 msgid "Target for quick access icon"
-msgstr ""
+msgstr "Ziel für Schnellzugriff-Icon"
 
 #: setup/lib/messages.inc.php:169
 msgid "Show logo in left frame"
