--- a/po/de.po
+++ b/po/de.po
@@ -6835,7 +6835,7 @@ msgstr "Logo im linken Frame anzeigen"
 
 #: setup/lib/messages.inc.php:170
 msgid "Display logo"
-msgstr ""
+msgstr "Logo anzeigen"
 
 #: setup/lib/messages.inc.php:171
 msgid "Display server choice at the top of the left frame"
