--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:34+0200\n"
+"PO-Revision-Date: 2010-05-25 12:35+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6839,7 +6839,7 @@ msgstr "Logo anzeigen"
 
 #: setup/lib/messages.inc.php:171
 msgid "Display server choice at the top of the left frame"
-msgstr ""
+msgstr "Server-Auswahl oben im linken Frame anzeigen"
 
 #: setup/lib/messages.inc.php:172
 msgid "Display servers selection"
