--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:35+0200\n"
+"PO-Revision-Date: 2010-05-25 12:36+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6848,6 +6848,7 @@ msgstr "Server-Auswahl anzeigen"
 #: setup/lib/messages.inc.php:173
 msgid "String that separates databases into different tree levels"
 msgstr ""
+"Zeichenkette, die Datenbanken in unterschiedliche Baum-Abschnitte unterteilt"
 
 #: setup/lib/messages.inc.php:174
 msgid "Database tree separator"
