Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:37+0200\n"
+"PO-Revision-Date: 2010-05-25 12:38+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6868,7 +6868,7 @@ msgstr "Datenbanken als Baum anzeigen"
 
 #: setup/lib/messages.inc.php:177
 msgid "Disable this if you want to see all databases at once"
-msgstr ""
+msgstr "Ausschalten, wenn Sie alle Datenbanken auf einmal sehen möchten"
 
 #: setup/lib/messages.inc.php:178
 msgid "Use light version"
