--- a/po/de.po
+++ b/po/de.po
@@ -6917,7 +6917,7 @@ msgstr "Benutze graphisch weniger anspruchsvolle Tabs"
 
 #: setup/lib/messages.inc.php:189
 msgid "Light tabs"
-msgstr ""
+msgstr "Light Tabs"
 
 #: setup/lib/messages.inc.php:191
 msgid ""
