Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:41+0200\n"
+"PO-Revision-Date: 2010-05-25 12:44+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6925,6 +6925,9 @@ msgid ""
 "only occurs for the current server. Setting this to FALSE makes it easy to "
 "forget to log out from other servers when connected to multiple servers."
 msgstr ""
+"Wenn TRUE, werden bei logout die Cookies für alle Server gelöscht, wenn "
+"FALSE, wird logout nur auf dem aktuellen Server vollzogen. FALSE macht es "
+"leicht, logout auf andern Servern zu vergessen."
 
 #: setup/lib/messages.inc.php:192
 msgid "Delete all cookies on logout"
