Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:45+0200\n"
+"PO-Revision-Date: 2010-05-25 12:49+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6952,6 +6952,10 @@ msgid ""
 "and will be deleted as soon as you close the browser window. This is "
 "recommended for non-trusted environments."
 msgstr ""
+"Legt fest, wie lange (in Sekunden) ein Login Cookie im Browser gespeichert "
+"werden sollte. Die Voreinstellung 0 bedeutet, dass es nur für die aktuell "
+"Sitzung gespeichert wird und beim Schließen des Browserfensters sofort "
+"gelöscht wird. Dies wird für nicht vertrauenswürdige Umgebungen empfohlen."
 
 #: setup/lib/messages.inc.php:196
 msgid "Login cookie store"
