--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:49+0200\n"
+"PO-Revision-Date: 2010-05-25 12:50+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -6963,7 +6963,7 @@ msgstr "Login Cookie Speicherung"
 
 #: setup/lib/messages.inc.php:197
 msgid "Define how long (in seconds) a login cookie is valid"
-msgstr ""
+msgstr "Legt fest, wie lange (in Sekunden) ein Login Cookie gültig ist"
 
 #: setup/lib/messages.inc.php:198
 msgid ""
