Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:52+0200\n"
+"PO-Revision-Date: 2010-05-25 12:53+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7003,6 +7003,9 @@ msgid ""
 "contains more rows, &quot;Previous&quot; and &quot;Next&quot; links will be "
 "shown."
 msgstr ""
+"Anzahl der angezeigten Zeilen in einem Abfrage-Ergebnis. Wenn mehr Zeilen "
+"vorhanden sind, werden &quot;Previous&quot; and &quot;Next&quot; Links "
+"angezeigt."
 
 #: setup/lib/messages.inc.php:205
 msgid "Maximum number of rows to display"
