Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:54+0200\n"
+"PO-Revision-Date: 2010-05-25 12:55+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7033,7 +7033,7 @@ msgstr "Speicher Limit"
 
 #: setup/lib/messages.inc.php:210 setup/lib/messages.inc.php:222
 msgid "Use only icons, only text or both"
-msgstr ""
+msgstr "Verwende nur Icons, nur Text oder beides"
 
 #: setup/lib/messages.inc.php:211
 msgid "Iconic navigation bar"
