--- a/po/de.po
+++ b/po/de.po
@@ -7053,7 +7053,7 @@ msgid ""
 "DATETIME and TIMESTAMP, ascending order otherwise"
 msgstr ""
 "[kbd]SMART[/kbd] -d.h. absteigende Sortierung für die Feldtypen TIME, DATE, "
-"DATETIME and TIMESTAMP, aufsteigende Sortierung für die anderen Feldtypen"
+"DATETIME und TIMESTAMP, aufsteigende Sortierung für die anderen Feldtypen"
 
 #: setup/lib/messages.inc.php:218
 msgid "Default sorting order"
