Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 12:58+0200\n"
+"PO-Revision-Date: 2010-05-25 13:00+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7061,7 +7061,7 @@ msgstr "Voreingestellte Sortierung"
 
 #: setup/lib/messages.inc.php:220
 msgid "Use persistent connections to MySQL databases"
-msgstr ""
+msgstr "Verwende andauernde Verbindungen zu MySQL Datenbanken"
 
 #: setup/lib/messages.inc.php:221
 msgid "Persistent connections"
