Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 13:00+0200\n"
+"PO-Revision-Date: 2010-05-25 13:01+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7073,7 +7073,7 @@ msgstr "Tabellenbearbeitung mittels Icons"
 
 #: setup/lib/messages.inc.php:224
 msgid "Disallow BLOB and BINARY fields from editing"
-msgstr ""
+msgstr "Verbiete Änderungen an BLOB und BINARY Feldern"
 
 #: setup/lib/messages.inc.php:225
 msgid "Protect binary fields"
