Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 13:01+0200\n"
+"PO-Revision-Date: 2010-05-25 13:05+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7084,6 +7084,10 @@ msgid ""
 "Enable if you want DB-based query history (requires pmadb). If disabled, "
 "this utilizes JS-routines to display query history (lost by window close)."
 msgstr ""
+"Einschalten, wenn Datenbankbasierte Abfragehistorien gewünscht werden "
+"(erfordert pmadb). Wenn ausgeschaltet, werden JS-Routinen zur Darstellung "
+"der Abfragehistorien, die beim Schließen des Fensters verloern gehen, "
+"eingesetzt, "
 
 #: setup/lib/messages.inc.php:227
 msgid "Permanent query history"
