Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 13:07+0200\n"
+"PO-Revision-Date: 2010-05-25 13:08+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7111,7 +7111,7 @@ msgstr "Voreingestelltes Tab für Abfragefenster"
 
 #: setup/lib/messages.inc.php:232
 msgid "Select which functions will be used for character set conversion"
-msgstr ""
+msgstr "Wahl der Funktionen zur Zeichensatz-Konvertierung"
 
 #: setup/lib/messages.inc.php:233
 msgid "Recoding engine"
