--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 13:08+0200\n"
+"PO-Revision-Date: 2010-05-25 13:09+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7123,7 +7123,7 @@ msgstr "Versuche fehlerhafte Werte auf den Standardwert zu setzen"
 
 #: setup/lib/messages.inc.php:236
 msgid "Directory where exports can be saved on server"
-msgstr ""
+msgstr "Verzeichnis auf dem Server für Exports"
 
 #: setup/lib/messages.inc.php:237
 msgid "Save directory"
